--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 
   <body style="margin: 0">
-    <div id="map" style="height: 100vh"></div> //地図画面用のdiv要素
-    <script type="module" src="/main.js"></script> //main.jsを読み込む
+    <div id="map" style="height: 100vh"></div>
+    <script type="module" src="/main.js"></script>
     
     
 
