--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body style="margin: 0">
     <div id="map" style="height: 100vh"></div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="main.js"></script>
     
     
 
