--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!--Maplibre GL JSの読み込み-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/maplibre-gl@3.3.1/dist/maplibre-gl.min.css">
     <script src="https://cdn.jsdelivr.net/npm/maplibre-gl@3.3.1/dist/maplibre-gl.min.js"></script>
+    <!--maplibre-gl-opacityの読み込み-->
+    <script src="https://cdn.jsdelivr.net/npm/maplibre-gl-opacity@1.4.0/dist/maplibre-gl-opacity.min.js"></script>
 
   </head>
 
