--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/maplibre-gl@3.3.1/dist/maplibre-gl.min.js"></script>
     <!--maplibre-gl-opacityの読み込み-->
     <script src="https://cdn.jsdelivr.net/npm/maplibre-gl-opacity@1.4.0/dist/maplibre-gl-opacity.min.js"></script>
+    <link rel="stylesheet" href="/location-map-sample/maplibre-gl-opacity.css">
 
   </head>
 
