--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!--maplibre-gl-opacityの読み込み-->
     <script src="https://cdn.jsdelivr.net/npm/maplibre-gl-opacity@1.4.0/dist/maplibre-gl-opacity.min.js"></script>
     <link rel="stylesheet" href="/location-map-sample/maplibre-gl-opacity.css">
+    <!--@turf/turfの読み込み-->
+    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6.5.0/turf.min.js"></script>
 
   </head>
 
