--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
 
   </head>
 
-
   <body style="margin: 0">
     <div id="map" style="height: 100vh"></div>
-    <script type="module" src="./main.js"></script>
-    
-    
-
+    <script src="./main.js"></script>
   </body>
 </html>
